# TareasZen

./: .gitignore  Audit.md  LICENSE  README.md  SETUP.md  TODOS.md  index.html  lingui.config.js  package-lock.json  package.json  vite.config.ts
locales/de/: messages.mo  messages.po  messages.ts
locales/en/: messages.po  messages.ts
locales/es/: messages.mo  messages.po  messages.ts
locales/pt/: messages.po
src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: database.rs  main.rs
src/components/: FilterBar.tsx  LabelManager.tsx  RecurringTaskForm.tsx  RecurringTaskManager.tsx  Settings.tsx  Sidebar.tsx  StartupNotifications.tsx  TaskCard.tsx  TaskForm.tsx  TaskView.tsx  ZenDialog.tsx
